--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 mistralai>=1.2.0
 pydantic>=2.9.0
+pydantic-settings>=2.0.0
 python-dotenv==1.0.0
 pillow==10.1.0
 aiofiles==23.2.1
